adicionando metodo listaTodos e mostrar na tela

--- a/springboot/src/main/resources/templates/cadastro/cadastropessoa.html
+++ b/springboot/src/main/resources/templates/cadastro/cadastropessoa.html
@@ -1,5 +1,5 @@
 <!DOCTYPE html>
-<html>
+<html xmlns:th="http://www.thymeleaf.org" xmlns:tiles="http://www.thymeleaf.org">
 <head>
 <meta charset="ISO-8859-1">
 <title>Insert title here</title>
@@ -17,5 +17,16 @@
 		
 		<input type="submit" value="Salvar">
 	</form>
+	
+	<table>
+		<tr th:each = "pessoa: ${pessoas}">
+			<td th:text = "${pessoa.id}"></td>
+			<td th:text = "${pessoa.nome}"></td>
+			<td th:text = "${pessoa.sobrenome}"></td>
+			<td th:text = "${pessoa.idade}"></td>
+		
+		</tr>
+	</table>
+	
 </body>
 </html>
