--- a/springboot/src/main/resources/templates/index.html
+++ b/springboot/src/main/resources/templates/index.html
@@ -3,10 +3,17 @@
 <head>
 	<meta charset="UTF-8"/>
 	<title>pagina inicial</title>
+	<!--Import Google Icon Font-->
+      <link href="https://fonts.googleapis.com/icon?family=Material+Icons" rel="stylesheet">
+      <!--Import materialize.css-->
+      <link type="text/css" rel="stylesheet" href="materialize/css/materialize.min.css"  media="screen,projection"/>
 	
 </head>
 <body>
 	<h2>Olá Spring Boot</h2>
 	<a href="/cadastropessoa">Cad.Pessoa</a> 
+	
+	<!--JavaScript at end of body for optimized loading-->
+      <script type="text/javascript" src="materialize/js/materialize.min.js"></script>
 </body>
 </html>
