--- a/springboot/src/main/resources/templates/cadastro/cadastropessoa.html
+++ b/springboot/src/main/resources/templates/cadastro/cadastropessoa.html
@@ -1,24 +1,26 @@
 <!DOCTYPE html>
 <html xmlns:th="http://www.thymeleaf.org" xmlns:tiles="http://www.thymeleaf.org">
 <head>
-<meta charset="ISO-8859-1">
-<title>Insert title here</title>
+	<meta charset="UTF-8"/>
+	<title>Cadastro de pessoas</title>
  	<!--Import Google Icon Font-->
       <link href="https://fonts.googleapis.com/icon?family=Material+Icons" rel="stylesheet">
       <!--Import materialize.css-->
-      <link type="text/css" rel="stylesheet" href="materialize/css/materialize.min.css"  media="screen,projection"/>
+      <link type="text/css" rel="stylesheet" href="/materialize/css/materialize.min.css"  media="screen,projection"/>
 
 </head>
 <body>
-	<form action="salvarpessoa" method="post">
+	<form action="salvarpessoa" method="post" th:object=${pessoaobj}>
+		<label>ID</label>
+		<input name="id" type="text" th:field="*{id}" readonly="readonly"/>
 		
 		<label>Nome</label>
-		<input name="nome" type="text"/>
+		<input name="nome" type="text" th:field="*{nome}"/>
 		
 		<label>Sobrenome</label>
-		<input name="sobrenome" type="text"/>
+		<input name="sobrenome" type="text" th:field="*{sobrenome}"/>
 		<label>Idade</label>
-		<input name="idade" type="text"/>
+		<input name="idade" type="text" th:field="*{idade}"/>
 		
 		<input type="submit" class=" waves-effect waves-light btn" value="Salvar" >
 	</form>
@@ -31,12 +33,13 @@
 			<td th:text = "${pessoa.nome}"></td>
 			<td th:text = "${pessoa.sobrenome}"></td>
 			<td th:text = "${pessoa.idade}"></td>
+			<td><a th:href="@{/editarpessoa/{idpessoa}(idpessoa=${pessoa.id})}">Editar</a></a></a></td>
 		
 		</tr>
 	</table>
 	
 
       <!--JavaScript at end of body for optimized loading-->
-      <script type="text/javascript" src="materialize/js/materialize.min.js"></script>
+      <script type="text/javascript" src="/materialize/js/materialize.min.js"></script>
 </body>
 </html>
