--- a/springboot/src/main/resources/templates/cadastro/telefones.html
+++ b/springboot/src/main/resources/templates/cadastro/telefones.html
@@ -22,7 +22,27 @@
 			<p><span th:text="${p.idade}"></span></p>
 		</div>
 		</div>
-	
+		
+		<h5>Telefones</h5>
+		
+		<div class="row">
+			<form th:action="@{/adicionarPessoa/{pessoaid}(pessoaid=${pessoaobj.id})}" method="post" class="col12">
+				<div class="row">
+					<div class="input-field col s6">
+						<label class="active" for="numero">Número:</label>
+						<input id="numero" name="numero" class="validate">
+					</div>
+					
+					<div class="input-field col s6">
+						<label class="active" for="tipo">Tipo:</label>
+						<input id="tipo" name="tipo" class="validate">
+					</div>
+				</div>
+				<input type="submit" value="Adicionar" class="waves-effect waves-light btn">
+			
+			</form>
+		
+		</div>
 	
 	<br/>
 	<a href="/cadastropessoa" class="waves-effect waves-light btn">Cad.Pessoa</a>
