apagando telefone e pessoa do sistema

--- a/springboot/src/main/resources/templates/cadastro/telefones.html
+++ b/springboot/src/main/resources/templates/cadastro/telefones.html
@@ -49,13 +49,14 @@
               <th>ID</th>
               <th>Número:</th>
               <th>Tipo:</th>
-              <th>Editar</th>
               <th>Excluir</th>
          	 </tr>
 			<tr th:each="fone:${telefones}">
 				<td th:text="${fone.id}" ></td>
 				<td th:text="${fone.numero}" ></td>
 				<td th:text="${fone.tipo}"></td>
+				
+				<td><a th:href="@{/removerTelefone/{idtelefone}(idtelefone=${fone.id})}">Excluir</a></td>
 				
 			</tr>
 		</table>
