--- a/springboot/src/main/resources/templates/cadastro/cadastropessoa.html
+++ b/springboot/src/main/resources/templates/cadastro/cadastropessoa.html
@@ -14,6 +14,12 @@
 	<h3>Spring Boot com thymeleaf</h3><br/>
 	<h5>Cadastro de Pessoa</h5>
 	
+	<br/>
+		<div th:each = "m:${msg}">
+			<span th:text = "${m}"></span>
+		</div>
+	<br/>
+	
 	<div class="row">
 		<form method="POST" action="/salvarpessoa" th:object="${pessoaobj}" class="col s12" id="formPessoa">
 			
