--- a/springboot/src/main/resources/templates/cadastro/cadastropessoa.html
+++ b/springboot/src/main/resources/templates/cadastro/cadastropessoa.html
@@ -1,5 +1,6 @@
 <!DOCTYPE html>
-<html xmlns:th="http://www.thymeleaf.org" xmlns:tiles="http://www.thymeleaf.org">
+<html xmlns:th="http://www.thymeleaf.org" xmlns:tiles="http://www.thymeleaf.org"
+xmlns:sec="http://www.thymeleaf.org/extras/spring-security">
 <head>
 	<meta charset="UTF-8"/>
 	<title>Cadastro de pessoas</title>
@@ -7,12 +8,19 @@
       <link href="https://fonts.googleapis.com/icon?family=Material+Icons" rel="stylesheet">
       <!--Import materialize.css-->
       <link type="text/css" rel="stylesheet" href="/materialize/css/materialize.min.css"  media="screen,projection"/>
+      <!-- Adicionando JQuery -->
+    <script src="https://code.jquery.com/jquery-3.7.1.min.js"
+            integrity="sha256-/JqT3SQfawRcv/BIHPThkBvs0OEvtFFmqPF/lYI/Cxo="
+            crossorigin="anonymous"></script>
 
 </head>
+
 <body>
 	 
 	<h3>Spring Boot com thymeleaf</h3><br/>
 	<h5>Cadastro de Pessoa</h5>
+	
+	
 	
 	<br/>
 		<div th:each = "m:${msg}">
@@ -41,11 +49,41 @@
 					<label for="sobrenome" class="active">Sobrenome</label>
 					<input name="sobrenome" type="text" th:field="*{sobrenome}" id="sobrenome" class="validate"/>
 				</div>
-				
-				<div class="input-field col s6">
+				<div sec:authorize="hasRole('ADMIN')">
+				<div class="input-field col s6" >
 					<label for="idade" class="active">Idade</label>
 					<input name="idade" type="number" th:field="*{idade}" id="idade" class="validate"/>
 				</div>
+				</div>
+			</div>
+			
+			<div class="row">
+			
+				<div class="input-field col s6">
+					<label for="cep" class="active">CEP</label>
+					<input name="cep" type="text" th:field="*{cep}" id="cep" class="validate"/>
+				</div>
+				
+				<div class="input-field col s6">
+					
+					<input name="rua" placeholder="RUA"  type="text" th:field="*{rua}" id="rua" class="validate" />
+				</div>
+				
+				<div class="input-field col s6">
+					
+					<input name="bairro" type="text" placeholder="Bairro"  th:field="*{bairro}" id="bairro" class="validate"/>
+				</div>
+				
+				<div class="input-field col s6">
+					
+					<input name="cidade" placeholder="Cidade"  type="text" th:field="*{cidade}" id="cidade" class="validate" />
+				</div>
+				
+				<div class="input-field col s6">
+					
+					<input name="uf" type="text" placeholder="UF"  th:field="*{uf}" id="uf" class="validate"  />
+				</div>
+			
 			</div>
 			
 			<div class="row">
@@ -57,6 +95,75 @@
 		</form>
 	</div>
 	<br/>
+	
+	
+	<script>
+
+        $(document).ready(function() {
+
+            function limpa_formulário_cep() {
+                // Limpa valores do formulário de cep.
+                $("#rua").val("");
+                $("#bairro").val("");
+                $("#cidade").val("");
+                $("#uf").val("");
+                $("#ibge").val("");
+            }
+            
+            //Quando o campo cep perde o foco.
+            $("#cep").blur(function() {
+
+                //Nova variável "cep" somente com dígitos.
+                var cep = $(this).val().replace(/\D/g, '');
+
+                //Verifica se campo cep possui valor informado.
+                if (cep != "") {
+
+                    //Expressão regular para validar o CEP.
+                    var validacep = /^[0-9]{8}$/;
+
+                    //Valida o formato do CEP.
+                    if(validacep.test(cep)) {
+
+                        //Preenche os campos com "..." enquanto consulta webservice.
+                        $("#rua").val("...");
+                        $("#bairro").val("...");
+                        $("#cidade").val("...");
+                        $("#uf").val("...");
+                        $("#ibge").val("...");
+
+                        //Consulta o webservice viacep.com.br/
+                        $.getJSON("https://viacep.com.br/ws/"+ cep +"/json/?callback=?", function(dados) {
+
+                            if (!("erro" in dados)) {
+                            	
+                                //Atualiza os campos com os valores da consulta.
+                                $("#rua").val(dados.logradouro);
+                                $("#bairro").val(dados.bairro);
+                                $("#cidade").val(dados.localidade);
+                                $("#uf").val(dados.uf);
+                                $("#ibge").val(dados.ibge);
+                            } //end if.
+                            else {
+                                //CEP pesquisado não foi encontrado.
+                                limpa_formulário_cep();
+                                alert("CEP não encontrado.");
+                            }
+                        });
+                    } //end if.
+                    else {
+                        //cep é inválido.
+                        limpa_formulário_cep();
+                        alert("Formato de CEP inválido.");
+                    }
+                } //end if.
+                else {
+                    //cep sem valor, limpa formulário.
+                    limpa_formulário_cep();
+                }
+            });
+        });
+        </script> 
 	
 	<br/>
 	
